--- a/plochonozi/diagnostika.html
+++ b/plochonozi/diagnostika.html
@@ -77,15 +77,13 @@
 				<div class="col-lg-9">
 					<h3 class="h4 pt-4" id="item-1">Úvod</h3>
 					<hr class="my-4">
-					<p>Součástí toho modulu je diagnostika stavu nožní klenby pomocí metody
+					<p class="text-justify">Součástí toho modulu je diagnostika stavu nožní klenby pomocí metody
 						Chippaux-Šmiřák. Základem pro diagnostiku nožní klenby pomocí metody Chippaux-Šmiřák je
 						<mark>otisk chodidla</mark> (plantograf). Tuto metodu lze využít s použitím digitálních
 						technologií (mobil, tablet, PC), tak i bez nich.</p>
-
-
 					<h3 class="h4 pt-5" id="item-2">Plantogram (otisk chodidla)</h3>
 					<hr class="my-4">
-					<p>
+					<p class="text-justify">
 						Pomocí plantografu neboli otisku chodidla se diagnostikuje stav nožní klenby. K získání
 						plantogramu se nejčastěji používají tlakové koberce, plošiny či speciální vložky. Ve školních
 						podmínkách otisk chodidla můžeme vytvořit např. při použití barvy na tělo a následným otiskem
@@ -174,7 +172,7 @@
 
 					<h3 class="h4 pt-5" id="item-3">Index nohy</h3>
 					<hr class="my-4">
-					<p><mark>Index nohy</mark> je poměr mezi nejužším a nejširším místem otisku
+					<p class="text-justify"><mark>Index nohy</mark> je poměr mezi nejužším a nejširším místem otisku
 						nohy, tato místa se měří na kolmicích k vnější tečně plantogramu.</p>
 					<blockquote class="blockquote text-center my-4">
 						<p class="mb-0">i [%] = (a / b) × 100</p>
@@ -239,7 +237,7 @@
 					</div>
 					<h3 class="h4 pt-5" id="item-5">Použití digitálních technologií</h3>
 					<hr class="my-4">
-					<p>
+					<p class="text-justify">
 						Pro výpočet indexu nohy dle metody Chippaux-Šmiřák lze využít digitální technologie. Pro
 						diagnostiku tedy stačí pouze plantogram (otisk chodidla) a tablet.
 					</p>
@@ -278,7 +276,7 @@
 							<h5 class="h6 mb-0">1. Otisk chodidla</h5>
 						</div>
 						<div class="card-body">
-							<p>Jak vytvořit svůj vlastní otisk chodidla je součástí kapitoly <a
+							<p class="text-justify">Jak vytvořit svůj vlastní otisk chodidla je součástí kapitoly <a
 									href="#item-2">Plantogram (otisk chodidla)</a>. Při tvorbě otisku chodidla je nutné plosky nohou zatížit přirozeným způsobem, 
 									tedy stoj mírně rozkročný. Pozor na přenášení celé váhy na jednu z dolních končetin.</p>
 						</div>
@@ -291,13 +289,13 @@
 								aplikace</h5>
 						</div>
 						<div class="card-body">
-							<p>Pro přenesení dokumentů, obrázků apod. do digitální formy, lze využít např. skenner. V
+							<p class="text-justify">Pro přenesení dokumentů, obrázků apod. do digitální formy, lze využít např. skenner. V
 								dnešní
 								době však existují nové technologie,
 								které dokáží plnohodnotně nahradit skenner, a tak nám postačí pouze mobilní zařízení s
 								vhodnou aplikací,
 								která skenování pomocí augumentované reality zajišťuje.</p>
-							<p>Pro naskenování otisku chodidla do digitální formy doporučujeme některou z těchto
+							<p class="text-justify">Pro naskenování otisku chodidla do digitální formy doporučujeme některou z těchto
 								aplikací, které lze zdarma stáhnout na mobilní telefony s operačním systémem Android /
 								iOS:</p>
 							<ul>
@@ -317,7 +315,7 @@
 										href="https://itunes.apple.com/us/app/adobe-scan-doc-scanner-to-pdf/id1199564834?mt=8">iOS</a>
 								</li>
 							</ul>
-							<p>Pro ukázku průběhu skenování otisku chodidla jsme zvolili aplikaci Microsoft Office Lens,
+							<p class="text-justify">Pro ukázku průběhu skenování otisku chodidla jsme zvolili aplikaci Microsoft Office Lens,
 								následuje krátký fotografický návod (obrázek 9–12). Popis jednotlivých obrázků se
 								zobrazí po rozkliknutí fotografie.</p>
 
@@ -367,7 +365,7 @@
 								chodidla pomocí mobilní
 								aplikace Microsoft Office Lens
 							</figcaption>
-							<p>Po tomto kroku máme <mark>převedený otisk chodidla do digitální</mark> podoby a jsme
+							<p class="text-justify">Po tomto kroku máme <mark>převedený otisk chodidla do digitální</mark> podoby a jsme
 								schopni soubor
 								přenést do pracovní stanice (PC).</p>
 						</div>
@@ -379,14 +377,14 @@
 							<h5 class="h6 mb-0">3. Přesunutí souboru do pracovní stanice</h5>
 						</div>
 						<div class="card-body">
-							<p>Naskenovaný otisk z mobilního telefonu lze přesunout mnoha způsoby:</p>
+							<p class="text-justify">Naskenovaný otisk z mobilního telefonu lze přesunout mnoha způsoby:</p>
 							<ul>
 								<li>sdílet pomocí sociálních sítí,</li>
 								<li>uložit do osobního cloudového uložiště (Google Disk, OneDrive, Dropbox ...),</li>
 								<li>poslat jako přílohu v emailu,</li>
 								<li>přesunout pomocí USB kabelu (mobil → PC).</li>
 							</ul>
-							<p>Následuje ukázka přenosu otisku chodidla pomocí USB kabelu (operační systém Android):</p>
+							<p class="text-justify">Následuje ukázka přenosu otisku chodidla pomocí USB kabelu (operační systém Android):</p>
 							<ol>
 								<li>Nejdříve je nutné připojit telefon k PC pomocí kabelu.</li>
 								<li>Po připojení telefonu k PC Vás telefon vyzve k potvrzení přenosu souborů mezi
@@ -398,7 +396,7 @@
 								<li>Otisk chodidla přeneseme do počítače (přetažením souboru nebo pomocí klávesové
 									zkrakty Ctrl+C pro kopírování a Ctrl+V pro vložení).</li>
 							</ol>
-							<p>Otisk chodidla máme připravený pro zjištění nejužšího a nejširšího místo nohy a
+							<p class="text-justify">Otisk chodidla máme připravený pro zjištění nejužšího a nejširšího místo nohy a
 								následného výpočtu indexu nohy pomocí metody Chippaux-Šmiřák.</p>
 						</div>
 					</div>
@@ -410,14 +408,14 @@
 								pomocí aplikace Geogebra</h5>
 						</div>
 						<div class="card-body">
-							<p>Program <a href="https://www.geogebra.org/">Geogebra</a> je webová matematická aplikace,
+							<p class="text-justify">Program <a href="https://www.geogebra.org/">Geogebra</a> je webová matematická aplikace,
 								kterou lze využít pro geometrii, algebru,
 								ale například i pro tvorbu grafů, výpočet statistiky apod. Výhodou této aplikace je
 								jednoduché intuitivní ovládání a obrovská komunita
 								uživatelů z celého světa. Geogebru lze využít i pro tvorbu interaktivních výukovách
 								materiálů.
 								Jako další výhodou je, že je dostupná zcela zdarma a v českém jazyce.</p>
-							<p>Nyní následuje video tutoriál ve kterém se naučíme, jak zjistit nejužší a nejširší místo
+							<p class="text-justify">Nyní následuje video tutoriál ve kterém se naučíme, jak zjistit nejužší a nejširší místo
 								na chodidle (Video 1).</p>
 							<figure class="figure mx-auto d-block w-75 py-4">
 								<video class="rounded img-fluid" controls muted>
@@ -427,7 +425,7 @@
 								<figcaption class="figure-caption text-center"><strong>Video 1</strong> Metoda
 									Chippaux-Šmiřák pomocí aplikace Geogebra</figcaption>
 							</figure>
-							<p>Na obrázku 14 je ukázán otisk chodidla s naměřenými hodnotami pro výpočet indexu nohy.</p>
+							<p class="text-justify">Na obrázku 14 je ukázán otisk chodidla s naměřenými hodnotami pro výpočet indexu nohy.</p>
 							<figure class="figure mx-auto d-block w-25 py-4">
 								<a class="lightbox-style" href="imgs/navod/plantogram-1.jpg" data-lightbox="plantogram"
 									data-title="Plantogram po zpracování v aplikaci Geogebra">
@@ -446,7 +444,7 @@
 								využití online výpočtu</h5>
 						</div>
 						<div class="card-body">
-							<p>Vypočítat index nohy pomocí Chippaux-Šmiřák koeficientu lze s využitím Excelu, či online kalkulačky na této stránce. 
+							<p class="text-justify">Vypočítat index nohy pomocí Chippaux-Šmiřák koeficientu lze s využitím Excelu, či online kalkulačky na této stránce. 
 								Na videu 2 je ukázka výpočtu indexu nohy pomocí Excelu. Není důležité v jakých jednotkách je výpočet proveden, 
 								je však nutné, aby obě hodnoty (A, B) měli totožné jednotky.</p>
 							<figure class="figure mx-auto d-block w-75 py-4">
@@ -500,7 +498,7 @@
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 02.03.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 31.03.2019</p>
 				</div>
 			</div>
 		</div>
