--- a/plochonozi/teorie.html
+++ b/plochonozi/teorie.html
@@ -74,7 +74,7 @@
         <div class="col-lg-9">
           <h3 class="h4 pt-4" id="item-1">Úvod</h3>
           <hr class="my-4">
-          <p>V průběhu vývoje člověka došlo současně s technologickým pokrokem k výrazné změně v
+          <p class="text-justify">V průběhu vývoje člověka došlo současně s technologickým pokrokem k výrazné změně v
             jeho pohybovém režimu.
             Po průmyslové revoluci (od 18. do 19. století) dochází postupně k usnadňování některých činností člověka.
             Člověk si začíná ulehčovat svou práci díky použití strojů. Postupně se dostaly do „hry“ také paliva, která
@@ -94,7 +94,7 @@
             po internetu zcela vytlačilo spontánní pohybové aktivity dětí uplatňovaných ve volném čase. Toto je možné
             vypozorovat při pohledu na
             prázdná sportovní hřiště vybudovaná u obytných zón.</p>
-          <p>Pasivní činnosti působí negativně na kvalitu nožní klenby, která ovlivňuje další
+          <p class="text-justify">Pasivní činnosti působí negativně na kvalitu nožní klenby, která ovlivňuje další
             části těla (držení těla).
             Nejde jen o to, že současná mladá generace věnuje sedavým činnostem velké množství času, ale nemá správný
             návyk sezení (nevhodné pozice vsedě,
@@ -104,7 +104,7 @@
           </p>
           <h3 class="h4 pt-4" id="item-2">Charakteristika lidské nohy</h3>
           <hr class="my-4">
-          <p>Lidská noha jako základní článek lidského těla slouží k lokomočnímu pohybu člověka
+          <p class="text-justify">Lidská noha jako základní článek lidského těla slouží k lokomočnímu pohybu člověka
             (bipedální lokomoce = chůze, běh, skoky, obraty).
             Noha je podpůrný a stabilizační orgán, který zprostředkovává kontakt s podložkou. Uchopovací vlastnost
             končeny (jako např. u opic)
@@ -115,7 +115,7 @@
             klenby může také ovlivnit držení těla.</p>
           <h3 class="h4 pt-4" id="item-3">Vývoj klenby nohy</h3>
           <hr class="my-4">
-          <p>Vývoj klenby nohy souvisel s napřimováním páteře v průběhu vývoje člověka. Pohyb po
+          <p class="text-justify">Vývoj klenby nohy souvisel s napřimováním páteře v průběhu vývoje člověka. Pohyb po
             dvou končetinách úzce souvisí s napřímením páteře v průběhu vývoje člověka.
             Při stoji, chůzi, běhu se musíme vyrovnávat s působením gravitační síly. S rozvojem dvouoporové lokomoce a
             napřímením lidského těla se rozvíjela a vznikala
@@ -130,50 +130,27 @@
             V šesti letech je nožní klenba více patrná.</p>
           <h3 class="h4 pt-4" id="item-4">Anatomie kostry nohy</h3>
           <hr class="my-4">
-          <p>Kostra nohy se skládá z 26 kostí (7 kostí zánártních, 5 kostí nártních, 14 kostí prstů
-            nohy), které jsou kloubně spojeny (obrázek 2).
+          <p class="text-justify">Kostra nohy se skládá z 26 kostí (7 kostí zánártních, 5 kostí nártních, 14 kostí prstů
+            nohy), které jsou kloubně spojeny.
             Kostra nohy je zpevněna, šlachami svalů, vazy a svaly v celém svém podélném průběhu od paty ke špičce.
             Všechny tyto části tvoří pružný funkční celek.</p>
-          <figure class="figure mx-auto d-block w-50 py-4">
-            <a class="lightbox-style" href="imgs/teorie-2.png" data-lightbox="image-2" data-title="Kostra nohy">
-              <img src="imgs/teorie-2.png" class="figure-img img-fluid rounded mx-auto d-block" alt="Kostra nohy">
-            </a>
-            <figcaption class="figure-caption text-center"><strong>Obrázek 2</strong> Kostra nohy</figcaption>
-          </figure>
           <h3 class="h4 pt-4" id="item-5">Klenba nohy</h3>
           <hr class="my-4">
-          <p>Vyklenutou část chodidla, která nemusí být ve všech případech v kontaktu s podložkou,
+          <p class="text-justify">Vyklenutou část chodidla, která nemusí být ve všech případech v kontaktu s podložkou,
             můžeme nazývat nožní klenbou.
             Při stoji by se noha v ideálním případě měla dotýkat podložky patou, zevním okrajem chodila, předním okrajem
             nártních kostí a bříšky prstů.
-            Podélná nožní klenba je vyšší na straně vnitřního kotníku (od palce po patu; červená linie v obrázku č. 3) a
-            nižší na vnější straně chodidla (od malíku po patu; modrá linie v obrázku č. 3)</p>
-          <figure class="figure mx-auto d-block w-50 py-4">
-            <a class="lightbox-style" href="imgs/teorie-3.png" data-lightbox="image-3" data-title="Podélná klenba nohy">
-              <img src="imgs/teorie-3.png" class="figure-img img-fluid rounded mx-auto d-block"
-                alt="Podélná klenba nohy">
-            </a>
-            <figcaption class="figure-caption text-center"><strong>Obrázek 3</strong> Podélná klenba nohy</figcaption>
-          </figure>
-          <p>Podélná klenba (obrázek 4) se rozkládá se mezi kostmi, vazy a svaly směrem od paty k
+            Podélná nožní klenba je vyšší na straně vnitřního kotníku (od palce po patu) a
+            nižší na vnější straně chodidla (od malíku po patu)</p>
+          <p class="text-justify">Podélná klenba se rozkládá se mezi kostmi, vazy a svaly směrem od paty k
             předním částem nártních kostí.
-            Příčná klenba (obrázek 4) nohy prochází v oblasti kosti krychlové a kostí klínových.</p>
-
-          <figure class="figure mx-auto d-block w-50 py-4">
-            <a class="lightbox-style" href="imgs/teorie-4.png" data-lightbox="image-4"
-              data-title="Podélná a příčná klenba nohy">
-              <img src="imgs/teorie-4.png" class="figure-img img-fluid rounded mx-auto d-block"
-                alt="Podélná a příčná klenba nohy">
-            </a>
-            <figcaption class="figure-caption text-center"><strong>Obrázek 4</strong> Podélná a příčná klenba nohy
-            </figcaption>
-          </figure>
-          <p>Klenba nohy zdvihá chodidlo nad podložku, čímž ovlivňuje pružnost nohy při chůzi nebo
+            Příčná klenba nohy prochází v oblasti kosti krychlové a kostí klínových.</p>
+          <p class="text-justify">Klenba nohy zdvihá chodidlo nad podložku, čímž ovlivňuje pružnost nohy při chůzi nebo
             stabilizuje stoj, který vyžaduje stálou
             koordinovanou aktivitu zúčastněných svalů. Oslabením svalů a uvolněním vazů udržujících nožní klenbu klesá
             vnitřní strana nohy a tím se mění i tvar nášlapné plochy.
-            Vzniká tak plochá noha, která má různé stupně (obrázek 5).</p>
-          <p>K oploštění klenby nohy může dojít díky:</p>
+            Vzniká tak plochá noha, která má různé stupně.</p>
+          <p class="text-justify">K oploštění klenby nohy může dojít díky:</p>
           <ul type="square">
             <li>genetickým predispozicím;</li>
             <li>nemocem, úrazům;</li>
@@ -183,7 +160,7 @@
             <li>dlouhodobému stání;</li>
             <li>nadměrnou hmotností.</li>
           </ul>
-          <p>Níže uvádíme několik možností nevhodné obuvi:</p>
+          <p class="text-justify">Níže uvádíme několik možností nevhodné obuvi:</p>
           <ul type="square">
             <li>obuv se špatně tvarovanou vložkou;</li>
             <li>nepřiměřeně velká či malá obuv;</li>
@@ -192,25 +169,11 @@
             <li>těžká obuv;</li>
             <li>obuv měkká v nártu.</li>
           </ul>
-          <p>Za prospěšné pro udržení správně klenuté nohy a prevenci plochonoží lze považovat
+          <p class="text-justify">Za prospěšné pro udržení správně klenuté nohy a prevenci plochonoží lze považovat
             chůzi po nerovném povrchu: písek, louka, oblázky
             a další cvičení, které jsou součástí interaktivní prezentace. Pohybové aktivity v tomto prostředí zajišťují
             dynamickou aktivitu svalů v oblasti nožní klenby.</p>
-          <p>Obraz nožní klenby je možné zjistit otiskem plosky nohy (plantogramem). Tvar otisku
-            nohy s různou klenbou je možné vidět na obrázku 5.</p>
-          <figure class="figure py-4 mx-auto d-block">
-            <a class="lightbox-style" href="imgs/teorie-5.png" data-lightbox="image-5"
-              data-title="Otisky chodidla při různém stupni vytvoření nebo poškození klenby nožní">
-              <img src="imgs/teorie-5.png" class="figure-img img-fluid rounded mx-auto d-block"
-                alt="Otisky chodidla při různém stupni vytvoření nebo poškození klenby nožní">
-            </a>
-            <p class="text-center small"><strong>Vysvětlivky:</strong> 1 – vysoce vyklenutá noha (za hranicí normálu); 2
-              – zvýšené vyklenutí nohy; 3 – normální noha; 4 – plochá noha;
-              5 – těžký stupeň ploché nohy, spojený s poklesem vnitřního kotníku a s přivrácením vnitřního okraje nohy k
-              podložce</p>
-            <figcaption class="figure-caption text-center"><strong>Obrázek 5</strong> Otisky chodidla při různém stupni
-              vytvoření nebo poškození klenby nožní</figcaption>
-          </figure>
+          <p class="text-justify">Obraz nožní klenby je možné zjistit otiskem plosky nohy (plantogramem).</p>
           <h3 class="h4 pt-4" id="item-6">Použitá literatura</h3>
           <hr class="my-4">
           <div class="references">
@@ -237,7 +200,7 @@
           <p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti</p>
         </div>
         <div class="col-lg-6 py-1">
-          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 02.03.2019</p>
+          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 31.03.2019</p>
         </div>
       </div>
     </div>
