Aktualizovaný metodický list (orienteering)

--- a/orienteering/index.html
+++ b/orienteering/index.html
@@ -204,7 +204,7 @@
 					<h4 class="h5 pt-4">Příloha 1</h4>
 					<p>Příklady jednotlivých QR kódů pro realizaci orientačního závodu</p>
 					<div class="row">
-						<div class="col-lg-3">
+						<div class="col-3">
 							<figure class="figure mx-auto d-block pt-4">
 								<a class="lightbox-style" href="imgs/qr-1.jpg" data-lightbox="qr"
 									data-title="Course Setup (pro načtení informací o závodu)">
@@ -213,7 +213,7 @@
 								</a>
 							</figure>
 						</div>
-						<div class="col-lg-3">
+						<div class="col-3">
 							<figure class="figure mx-auto d-block pt-4">
 								<a class="lightbox-style" href="imgs/qr-2.jpg" data-lightbox="qr"
 									data-title="Course Start (startovní kód – po jeho načtení běží závodníkovi jeho čas)">
@@ -222,7 +222,7 @@
 								</a>
 							</figure>
 						</div>
-						<div class="col-lg-3">
+						<div class="col-3">
 							<figure class="figure mx-auto d-block pt-4">
 								<a class="lightbox-style" href="imgs/qr-3.jpg" data-lightbox="qr"
 									data-title="Check Point (příklad prvního jednotlivé kontrolní bodu trasy)">
@@ -231,7 +231,7 @@
 								</a>
 							</figure>
 						</div>
-						<div class="col-lg-3">
+						<div class="col-3">
 							<figure class="figure mx-auto d-block pt-4">
 								<a class="lightbox-style" href="imgs/qr-4.jpg" data-lightbox="qr"
 									data-title="Course End Check Point (cíl a konec závodu, po načtení se zastaví závodníkovu měření času a data je možno po připojení odeslat)">
@@ -251,7 +251,8 @@
 						</a>
 					</figure>
 					<h4 class="h5 pt-4">Příloha 3</h4>
-					<p>Příklad výsledků závodu na stránkách <a href="http://www.iorienteering.com">iorienteering.com</a></p>
+					<p>Příklad výsledků závodu na stránkách <a href="http://www.iorienteering.com">iorienteering.com</a>
+					</p>
 					<figure class="figure mx-auto d-block w-75 py-4">
 						<a class="lightbox-style" href="imgs/img-8.jpg" data-lightbox="img-8"
 							data-title="Příklad výsledků závodu">
@@ -260,36 +261,40 @@
 						</a>
 					</figure>
 					<h4 class="h5 pt-4">Příloha 4</h4>
-					<p>Příklady mapových podkladů pro realizaci orientační aktivity s využitím aplikace iOrienteering</p>
+					<p>Příklady mapových podkladů pro realizaci orientační aktivity s využitím aplikace iOrienteering
+					</p>
 					<div class="row">
-							<div class="col-lg-4">
-								<figure class="figure mx-auto d-block pt-4">
-									<a class="lightbox-style" href="imgs/map-1.jpg" data-lightbox="map"
-										data-title="Příklad mapového podkladu 1">
-										<img src="imgs/map-1.jpg" class="figure-img img-fluid rounded mx-auto d-block"
-											alt="Příklad mapového podkladu 1">
-									</a>
-								</figure>
-							</div>
-							<div class="col-lg-4">
-								<figure class="figure mx-auto d-block pt-4">
-									<a class="lightbox-style" href="imgs/map-2.jpg" data-lightbox="map"
-										data-title="Příklad mapového podkladu 2">
-										<img src="imgs/map-2.jpg" class="figure-img img-fluid rounded mx-auto d-block"
-											alt="Příklad mapového podkladu 2">
-									</a>
-								</figure>
-							</div>
-							<div class="col-lg-4">
-								<figure class="figure mx-auto d-block pt-4">
-									<a class="lightbox-style" href="imgs/map-3.jpg" data-lightbox="map"
-										data-title="Příklad mapového podkladu 3">
-										<img src="imgs/map-3.jpg" class="figure-img img-fluid rounded mx-auto d-block"
-											alt="Příklad mapového podkladu 3">
-									</a>
-								</figure>
-							</div>
-					<p class="text-justify"><strong>Poznámka:</strong> Mapové podklady budou pro cvičené školy k dispozici po ukončení nákupů z projektu. Rovněž bude k dipsozici omezené množství mobilních tefonních přístrojů.</p>
+						<div class="col-4">
+							<figure class="figure mx-auto d-block pt-4">
+								<a class="lightbox-style" href="imgs/map-1.jpg" data-lightbox="map"
+									data-title="Příklad mapového podkladu 1">
+									<img src="imgs/map-1.jpg" class="figure-img img-fluid rounded mx-auto d-block"
+										alt="Příklad mapového podkladu 1">
+								</a>
+							</figure>
+						</div>
+						<div class="col-4">
+							<figure class="figure mx-auto d-block pt-4">
+								<a class="lightbox-style" href="imgs/map-2.jpg" data-lightbox="map"
+									data-title="Příklad mapového podkladu 2">
+									<img src="imgs/map-2.jpg" class="figure-img img-fluid rounded mx-auto d-block"
+										alt="Příklad mapového podkladu 2">
+								</a>
+							</figure>
+						</div>
+						<div class="col-4">
+							<figure class="figure mx-auto d-block pt-4">
+								<a class="lightbox-style" href="imgs/map-3.jpg" data-lightbox="map"
+									data-title="Příklad mapového podkladu 3">
+									<img src="imgs/map-3.jpg" class="figure-img img-fluid rounded mx-auto d-block"
+										alt="Příklad mapového podkladu 3">
+								</a>
+							</figure>
+						</div>
+					</div>
+					<p class="text-justify"><strong>Poznámka:</strong> Mapové podklady budou pro cvičené školy k
+						dispozici po ukončení nákupů z projektu. Rovněž bude k dipsozici omezené množství mobilních
+						tefonních přístrojů.</p>
 				</div>
 			</div>
 		</div>
@@ -303,10 +308,9 @@
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 31.03.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 09.05.2019</p>
 				</div>
 			</div>
-		</div>
 		</div>
 	</footer>
 
