--- a/zdatnost/diagnostika.html
+++ b/zdatnost/diagnostika.html
@@ -13,14 +13,14 @@
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>DG – Plochonoží | Diagnostika</title>
+	<title>DG – Zdatnost | Diagnostika</title>
 </head>
 
 <body class="d-flex flex-column h-100" data-spy="scroll" data-target="#content-menu" data-offset="100">
 	<header>
 		<nav class="navbar navbar-expand navbar-dark bg-dark">
 			<div class="container">
-				<a href="index.html" class="navbar-brand">DG - Plochonoží</a>
+				<a href="index.html" class="navbar-brand">DG - Zdatnost</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
 					aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -35,10 +35,11 @@
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
 								aria-haspopup="true" aria-expanded="false">Moduly </a>
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
-								<a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
-								<a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-								<a class="dropdown-item" href="diagnostika.html">Metoda Chippaux-Šmiřák</a>
-								<a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
+									<a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
+									<a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
+									<a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
+									<a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+									<a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
 							</div>
 						</li>
 					</ul>
@@ -167,7 +168,7 @@
 							</figure>
 						</div>
 					</div>
-					<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 5–8</strong> Plantogram pomocí barvy na tělo
+					<figcaption class="figure-caption pb-4"><strong>Obrázek 5–8</strong> Plantogram pomocí barvy na tělo
 					</figcaption>
 
 					<h3 class="h4 pt-5" id="item-3">Index nohy</h3>
@@ -182,7 +183,7 @@
 						<small><mark>b</mark> – rozměr nejširšího místa plantogramu [mm]</small>
 					</div>
 					<figure class="figure mx-auto d-block w-50 py-4">
-						<a class="lightbox-style" href="imgs/chippaux-smirak.png" data-lightbox="chippaux"
+						<a class="lightbox-style" href="imgs/chippaux-smirak.png" data-lightbox="srdecni-frekvence"
 							data-title="Index nohy dle Chippaux-Šmiřák">
 							<img src="imgs/chippaux-smirak.png" class="figure-img img-fluid rounded mx-auto d-block"
 								alt="Index nohy dle Chippaux-Šmiřák">
@@ -498,7 +499,7 @@
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 31.03.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 25.08.2019</p>
 				</div>
 			</div>
 		</div>
