DVZ - Technika běhu
Přidáno DVZ – Technika běhu, upravený README, opraveny drobné chyby v ostatních DVZ

--- a/atletika/index.html
+++ b/atletika/index.html
@@ -12,14 +12,14 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>DG – Zdatnost</title>
+    <title>DG – Technika běhu</title>
 </head>
 
 <body class="d-flex flex-column h-100">
     <header>
         <nav class="navbar navbar-expand navbar-dark bg-dark">
             <div class="container">
-                <a href="index.html" class="navbar-brand">DG - Zdatnost</a>
+                <a href="index.html" class="navbar-brand">DG – Technika běhu</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
                     aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarsDefault">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="dvz-zdatnost_metodicky-list.pdf">Metodický list</a>
+                            <a class="nav-link" href="dvz-atletika_metodicky-list.pdf">Metodický list</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
@@ -36,8 +36,7 @@
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
                                 <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
                                 <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-                                <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
-                                <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+                                <a class="dropdown-item" href="diagnostika.html">Analýza techniky běhu</a>
                                 <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
                             </div>
                         </li>
@@ -48,11 +47,10 @@
 
         <div class="jumbotron jumbotron-fluid bg-light text-center">
             <div class="container">
-                <h1 class="display-4">Rozvoj zdatnosti</h1>
-                <p class="lead text-muted">Měření srdeční frekvence, výpočet a využití anaerobního a aerobního prahu v
-                    praxi.</p>
+                <h1 class="display-4">Technika běhu</h1>
+                <p class="lead text-muted">Způsoby, biomechanika a analýza běhu.</p>
                 <p>
-                    <a href="https://github.com/heidler/dvz/releases" class="btn btn-info my-2">Stáhnout offline
+                    <a href="https://github.com/heidler/dvz/releases" class="custom-btn btn btn-danger my-2">Stáhnout offline
                         verzi</a>
                 </p>
             </div>
@@ -76,25 +74,17 @@
                 </a>
                 <div class="w-100 d-none d-sm-block d-md-block d-lg-none mb-4"></div>
                 <!-- wrap every 2 on sm-->
-                <a href="metody.html" class="card border-dark shadow-sm d-flex custom-card">
-                    <div class="card-body d-flex align-items-center justify-content-center">
-                        <h5 class="card-title text-center">Metody hodnocení zdatnosti</h5>
-                    </div>
-                    <small class="card-footer text-right">Metody</small>
-                </a>
                 <a href="diagnostika.html" class="card border-dark shadow-sm d-flex custom-card">
                     <div class="card-body d-flex align-items-center justify-content-center">
-                        <h5 class="card-title text-center">Testování zdatnosti</h5>
+                        <h5 class="card-title text-center">Analýza techniky běhu</h5>
                     </div>
                     <small class="card-footer text-right">Diagnostika</small>
                 </a>
-                <div class="w-100 d-none d-sm-block d-md-block d-lg-none mb-4"></div>
-                <!-- wrap every 2 on sm-->
                 <a href="cviceni.html" class="card border-dark shadow-sm d-flex custom-card">
                     <div class="card-body d-flex align-items-center justify-content-center">
                         <h5 class="card-title text-center">Soubor cvičení</h5>
                     </div>
-                    <small class="card-footer text-right">Rozvoj</small>
+                    <small class="card-footer text-right">Náprava chyb</small>
                 </a>
             </div>
         </div>
