--- a/atletika/_cviceni.html
+++ b/atletika/_cviceni.html
@@ -12,14 +12,14 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>DG – Plochonoží | Soubor cvičení</title>
+  <title>DG – Technika běhu | Soubor cvičení</title>
 </head>
 
 <body class="d-flex flex-column h-100">
   <header>
     <nav class="navbar navbar-expand navbar-dark bg-dark">
       <div class="container">
-          <a href="index.html" class="navbar-brand">DG - Zdatnost</a>
+          <a href="index.html" class="navbar-brand">DG – Technika běhu</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
               aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarsDefault">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                      <a class="nav-link" href="dvz-zdatnost_metodicky-list.pdf">Metodický list</a>
+                      <a class="nav-link" href="dvz-atletika_metodicky-list.pdf">Metodický list</a>
                   </li>
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
@@ -36,8 +36,7 @@
                       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
                           <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
                           <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-                          <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
-                          <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+                          <a class="dropdown-item" href="diagnostika.html">Analýza techniky běhu</a>
                           <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
                       </div>
                   </li>
