--- a/atletika/test.html
+++ b/atletika/test.html
@@ -12,23 +12,23 @@
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="css/style.css">
 
-	<title>DG – Zdatnost | Vědomostní kvíz</title>
+	<title>DG – Technika běhu | Vědomostní kvíz</title>
 </head>
 
 <body class="d-flex flex-column h-100">
 	<header>
 		<nav class="navbar navbar-expand navbar-dark bg-dark">
-            <div class="container">
-                <a href="index.html" class="navbar-brand">DG - Zdatnost</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
-                    aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+			<div class="container">
+				<a href="index.html" class="navbar-brand">DG - Technika běhu</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
+					aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-                <div class="collapse navbar-collapse" id="navbarsDefault">
+				<div class="collapse navbar-collapse" id="navbarsDefault">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="dvz-zdatnost_metodicky-list.pdf">Metodický list</a>
+                            <a class="nav-link" href="dvz-atletika_metodicky-list.pdf">Metodický list</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
@@ -36,15 +36,14 @@
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
                                 <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
                                 <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-                                <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
-                                <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+                                <a class="dropdown-item" href="diagnostika.html">Analýza techniky běhu</a>
                                 <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
                             </div>
                         </li>
                     </ul>
                 </div>
-            </div>
-        </nav>
+			</div>
+		</nav>
 
 		<div class="jumbotron jumbotron-fluid bg-light text-center">
 			<div class="container">
@@ -64,9 +63,9 @@
 			<div class="row d-flex justify-content-center">
 				<div class="col-lg-8">
 					<div class="text-center pt-4">
-						<button type="button" class="btn btn-outline-info control-button" id="prev">Zpět</button>
-						<button type="button" class="btn btn-outline-info control-button" id="next">Další</button>
-						<button type="button" class="btn btn-outline-info" id="start" style="display: none">Opakovat
+						<button type="button" class="btn btn-outline-danger control-button" id="prev">Zpět</button>
+						<button type="button" class="btn btn-outline-danger control-button" id="next">Další</button>
+						<button type="button" class="btn btn-outline-danger" id="start" style="display: none">Opakovat
 							kvíz</button>
 					</div>
 				</div>
