--- a/zdatnost/teorie.html
+++ b/zdatnost/teorie.html
@@ -20,32 +20,32 @@
   <header>
     <nav class="navbar navbar-expand navbar-dark bg-dark">
       <div class="container">
-        <a href="index.html" class="navbar-brand">DG - Zdatnost</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
-          aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+          <a href="index.html" class="navbar-brand">DG - Zdatnost</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
+              aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse" id="navbarsDefault">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="dvz-plochonozi_metodicky-list.pdf">Metodický list</a>
-              </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">Moduly </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
-                  <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
-                  <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-                  <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
-                  <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
-                  <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
-              </div>
-            </li>
-          </ul>
-        </div>
+          <div class="collapse navbar-collapse" id="navbarsDefault">
+              <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="dvz-zdatnost_metodicky-list.pdf">Metodický list</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
+                          aria-haspopup="true" aria-expanded="false">Moduly </a>
+                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
+                          <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
+                          <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
+                          <a class="dropdown-item" href="metody.html">Metody hodnocení zdatnosti</a>
+                          <a class="dropdown-item" href="diagnostika.html">Testování zdatnosti</a>
+                          <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
+                      </div>
+                  </li>
+              </ul>
+          </div>
       </div>
-    </nav>
+  </nav>
 
     <div class="jumbotron jumbotron-fluid bg-light text-center">
       <div class="container">
