--- a/atletika/diagnostika.html
+++ b/atletika/diagnostika.html
@@ -19,32 +19,32 @@
 <body class="d-flex flex-column h-100" data-spy="scroll" data-target="#content-menu" data-offset="100">
 	<header>
 		<nav class="navbar navbar-expand navbar-dark bg-dark">
-            <div class="container">
-                <a href="index.html" class="navbar-brand">DG – Technika běhu</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
-                    aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+			<div class="container">
+				<a href="index.html" class="navbar-brand">DG – Technika běhu</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsDefault"
+					aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-                <div class="collapse navbar-collapse" id="navbarsDefault">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="dvz-atletika_metodicky-list.pdf">Metodický list</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Moduly </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
-                                <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
-                                <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-                                <a class="dropdown-item" href="diagnostika.html">Analýza techniky běhu</a>
-                                <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+				<div class="collapse navbar-collapse" id="navbarsDefault">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="dvz-atletika_metodicky-list.pdf">Metodický list</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">Moduly </a>
+							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
+								<a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
+								<a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
+								<a class="dropdown-item" href="diagnostika.html">Analýza techniky běhu</a>
+								<a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
 		<div class="jumbotron jumbotron-fluid bg-light text-center">
 			<div class="container">
@@ -60,24 +60,29 @@
 				<div class="col-lg-12">
 					<h3 class="h4 pt-4" id="item-1">Postup</h3>
 					<hr class="my-4">
-					<p>Coach's Eye je platforma pro trenéry a sportovce, kteří potřebují přezkoumat techniku atletů. Je vhodná pro analýzu videa, které se natočí na mobilní telefon nebo tablet. Je volně <a href="https://play.google.com/store/apps/details?id=com.techsmith.apps.coachseye.free&hl=cs">dostupná ke stažení</a> v základní verzi na Google Play</p>
+					<p>Coach's Eye je platforma pro trenéry a sportovce, kteří potřebují přezkoumat techniku atletů. Je
+						vhodná pro analýzu videa, které se natočí na mobilní telefon nebo tablet. Je volně <a
+							href="https://play.google.com/store/apps/details?id=com.techsmith.apps.coachseye.free&hl=cs">dostupná
+							ke stažení</a> v základní verzi na Google Play.</p>
 
 
 					<div class="card border-dark shadow-sm d-flex mt-4">
-							<div class="card-header">
-								<h5 class="h6 mb-0">1. krok</h5>
-							</div>
-							<div class="card-body">
-								<p>Stáhněte si aplikaci Coach's Eye do svého mobilního telefonu nebo tabletu</p>
-							</div>
+						<div class="card-header">
+							<h5 class="h6 mb-0">1. krok</h5>
 						</div>
+						<div class="card-body">
+							<p>Stáhněte si aplikaci <a
+								href="https://play.google.com/store/apps/details?id=com.techsmith.apps.coachseye.free&hl=cs">Coach's Eye</a> do svého mobilního telefonu nebo tabletu.</p>
+						</div>
+					</div>
 
 					<div class="card border-dark shadow-sm d-flex mt-4">
 						<div class="card-header">
 							<h5 class="h6 mb-0">2. krok</h5>
 						</div>
 						<div class="card-body">
-							<p>Po otevření aplikace můžete zmáčknutím <mark>zelené ikony fotoaparátu</mark> nahrát video nebo otevřít video nahrané z paměti telefonu 
+							<p>Po otevření aplikace můžete zmáčknutím <mark>zelené ikony fotoaparátu</mark> nahrát video
+								nebo otevřít video nahrané z paměti telefonu
 								(Obr. 1).</p>
 							<figure class="figure mx-auto d-block w-25 py-4">
 								<a class="lightbox-style" href="imgs/navod-2.png" data-lightbox="aplikace"
@@ -91,30 +96,31 @@
 					</div>
 
 					<div class="card border-dark shadow-sm d-flex mt-4">
-							<div class="card-header">
-								<h5 class="h6 mb-0">3. krok</h5>
-							</div>
-							<div class="card-body">
-								<p>Pro nahrávání videa zmáčkněte ikonu <mark>Camera</mark>, pro import již nahraného videa z paměti telefonu zmáčkněte ikonu <mark>Import</mark>.</p>
-								<figure class="figure mx-auto d-block w-25 py-4">
-										<a class="lightbox-style" href="imgs/navod-5.png" data-lightbox="aplikace"
-											data-title="3. krok – Camera/import tlačítka">
-											<img src="imgs/navod-5.png" class="figure-img img-fluid rounded mx-auto d-block"
-												alt="3. krok – Camera/import tlačítka">
-										</a>
-										<figcaption class="figure-caption text-center"><strong>Obrázek 2</strong></figcaption>
-									</figure>
-							</div>
+						<div class="card-header">
+							<h5 class="h6 mb-0">3. krok</h5>
 						</div>
+						<div class="card-body">
+							<p>Pro nahrávání videa zmáčkněte ikonu <mark>Camera</mark>, pro import již nahraného videa z
+								paměti telefonu zmáčkněte ikonu <mark>Import</mark> (Obr. 2).</p>
+							<figure class="figure mx-auto d-block w-25 py-4">
+								<a class="lightbox-style" href="imgs/navod-5.png" data-lightbox="aplikace"
+									data-title="3. krok – Camera/import tlačítka">
+									<img src="imgs/navod-5.png" class="figure-img img-fluid rounded mx-auto d-block"
+										alt="3. krok – Camera/import tlačítka">
+								</a>
+								<figcaption class="figure-caption text-center"><strong>Obrázek 2</strong></figcaption>
+							</figure>
+						</div>
+					</div>
 
-						<div class="card border-dark shadow-sm d-flex mt-4">
-								<div class="card-header">
-									<h5 class="h6 mb-0">4. krok</h5>
-								</div>
-								<div class="card-body">
-									<p>Nahrajte spolužáka při běhu pomocí červeného tlačítka.</p>
-								</div>
-							</div>
+					<div class="card border-dark shadow-sm d-flex mt-4">
+						<div class="card-header">
+							<h5 class="h6 mb-0">4. krok</h5>
+						</div>
+						<div class="card-body">
+							<p>Nahrajte spolužáka při běhu pomocí červeného tlačítka.</p>
+						</div>
+					</div>
 
 
 				</div>
